js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-if-braceless-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
if
(
true
)
import
.
source
(
'
<
module
source
>
'
)
;
reportCompare
(
0
0
)
;
