js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-not-extensible-args.js
DONOTEVALUATE
(
)
;
if
(
true
)
{
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
